--- a/Desafios/d6/d6.html
+++ b/Desafios/d6/d6.html
@@ -6,7 +6,7 @@
     <li>
 <p title="<html></html>"> elemento básico da estrutura do HTML.</p></li>
     <li>
-<p title="<h1></h1>">Título maior</p></li>
+<p title="<h1></h1>">Título nível 1</p></li>
     <li>
 <p title="<b></b>"><b>Negrito</b></p></li>
     <li>   
