--- a/Desafios/d1/d1.html
+++ b/Desafios/d1/d1.html
@@ -1,7 +1,11 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-<title>Primeiro Desafio</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Primeiro Desafio</title>
 </head>
 <body>
 	<h1>Desafio das Mensagens</h1>
@@ -14,3 +18,6 @@
 		***tres         <br>
 			**dois         <br>
 				*um       </p>
+
+</body>
+</html>				
