--- a/Desafios/d2/d2.html
+++ b/Desafios/d2/d2.html
@@ -6,7 +6,7 @@
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <title>teste de icone </title>
 </head>
-<body bgcolor=orange>
-    <p align=center><img src=https://i.imgur.com/wMIGqS0.jpg></p>
+<body bgcolor=blue>
+    <p align=center><img src=https://upload.wikimedia.org/wikipedia/commons/a/a5/Google_Chrome_icon_%28September_2014%29.svg></p>
 </body>
 </html>
