--- a/Desafios/d7/d7.html
+++ b/Desafios/d7/d7.html
@@ -1,7 +1,7 @@
 <html>
 <body>
-<h1>imagem flexivel </h1>
-<p>experimente ampliar o tamanho da janela para aproveitar melhor a experiencia 😎</p>
+<h1>Imagem Flexivel </h1>
+<p>Experimente ampliar o tamanho da janela para aproveitar melhor a experiencia 😎</p>
 <picture>
     
     <img src="https://i.imgur.com/Hc5SIuX.jpeg" widht=100% height=100%>
