--- a/Desafios/d4/d4.html
+++ b/Desafios/d4/d4.html
@@ -11,7 +11,7 @@
     <ol>
         <li>😎 codigo U+1F60E</li>
         <li>😉 codigo U+1F609</li>
-        <li>😏 codigo U+1F60F</li>
+        <li>😄codigo  U + 1F604  </li>
     </ol>
     <h2>Mãos</h2>
     <ol>
