--- a/Desafios/d5/d5.html
+++ b/Desafios/d5/d5.html
@@ -13,7 +13,9 @@
 </p>
 <h2>Como falar comigo ?</h2>
 <ol>
-     
+    <li><a href="https//www.instagram.com/annalaura1811/ "</a> - Me segue la no instagram </li>
+        <li><a href="https://github.com/Anna-Laura1811/HTML-e-CSS-M-dulo-1"</a> - Acessa meu repositorio público no GitHub </li>
+        
 </ol>
 </body>
 </html>                                                                        
