--- a/Desafios/d8/d8.html
+++ b/Desafios/d8/d8.html
@@ -10,6 +10,6 @@
     <h1>Usando links internos</h1>
     <p>Esta é a primeira pagina do site. se voce quiser, pode acessar tambem a minha </p><p><a href="pag002.html" rel="next">segunda pagina</a></p>
     <p>Ou se preferir, tambem tem a terceira pagina</p> <p><a href="pag003.html" rel="next">terceira pagina</a></p>
-    <img src=https://i.imgur.com/kliHB4d.png widht=100% height=100%>
+    <img src= widht=100% height=100%>
 </body>
 </html>
