--- a/Desafios/d5/d5.html
+++ b/Desafios/d5/d5.html
@@ -8,7 +8,7 @@
 <h1>Minhas Redes Sociais</h1>
 <body>
     <h2>Quem sou eu ?</h2>
-<img src=https://i.imgur.com/X4n8jR1.png width=150px height=210px >
+<img src= width=150px height=210px >
 <p>Meu nome é Anna Laura Oliveira Batista, sou aluno do curso se Sistemas da informação na faculdade UEMG, e pretendo sim viver disso no futuro.
 </p>
 <h2>Como falar comigo ?</h2>
