--- a/Desafios/d4/d4.html
+++ b/Desafios/d4/d4.html
@@ -13,10 +13,10 @@
         <li>😉 codigo U+1F609</li>
         <li>😄codigo  U + 1F604  </li>
     </ol>
-    <h2>Mãos</h2>
+    <h2>Computador</h2>
     <ol>
-        <li>👊 codigo U+1F44A</li>
-        <li>🤌 codigo U+1F90C</li>
+        <li>💻 U + 1F4BB</li>
+       
         
     </ol>
     <h2>Animais</h2>
