--- a/Desafios/d5/d5.html
+++ b/Desafios/d5/d5.html
@@ -8,13 +8,13 @@
 <h1>Minhas Redes Sociais</h1>
 <body>
     <h2>Quem sou eu ?</h2>
-<img src= width=150px height=210px >
-<p>Meu nome é Anna Laura Oliveira Batista, sou aluno do curso se Sistemas da informação na faculdade UEMG, e pretendo sim viver disso no futuro.
+<img src="Anna (2).jpg" width=150px height=210px >
+<p>Meu nome é Anna Laura Oliveira Batista, sou aluna do curso se Sistemas da informação na faculdade UEMG, e pretendo sim viver disso no futuro.
 </p>
 <h2>Como falar comigo ?</h2>
 <ol>
     <li><a href="https//www.instagram.com/annalaura1811/ "</a> - Me segue la no instagram </li>
-        <li><a href="https://github.com/Anna-Laura1811/HTML-e-CSS-M-dulo-1"</a> - Acessa meu repositorio público no GitHub </li>
+    <li><a href="https://github.com/Anna-Laura1811/HTML-e-CSS-M-dulo-1"</a> - Acessa meu repositorio público no GitHub </li>
         
 </ol>
 </body>
