--- a/Desafios/d8/d8.html
+++ b/Desafios/d8/d8.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Usando links internos</h1>
     <p>Esta é a primeira pagina do site. se voce quiser, pode acessar tambem a minha </p><p><a href="pag002.html" rel="next">segunda pagina</a></p>
-    <p>Ou se preferir, tambem tem a terceira pagina</p> <p><a href="pag003.html" rel="next">terceira pagina</a></p>
-    <img src= widht=100% height=100%>
+    <p>Se preferir, tambem tem a terceira pagina</p> <p><a href="pag003.html" rel="next">terceira pagina</a></p>
+    <img src="Uriy1966-Steel-System-Windows.ico" widht=100% height=100%>
 </body>
 </html>
